<resources>
    <string name="app_name">Rozvrhovanie a Logistika</string>
    <string name="teoria_btn">Teória</string>
    <string name="ulohy_btn">Príklady</string>
    <string name="testy_btn">Testy</string>
    <string name="settings">Nastavenia</string>
    <string name="Sign_out">Odhlásiť sa</string>
    <string name="Change_theme">Zmeniť tému</string>
    <string name="title_activity_result_quiz">Test</string>

    <string name="login_title">Prihlásenie</string>
    <string name="login_button">Prihlásiť sa</string>
    <string name="login_email">Email</string>
    <string name="login_password">Heslo</string>
    <string name="login_go_to_registration">Nie ste zaregistrovaný?</string>
    <string name="forgot_password">Zabudli ste heslo? Kliknite sem</string>

    <string name="registration_title">Registrácia</string>
    <string name="registration_button">Zaregistrovať sa</string>
    <string name="registration_email">Email</string>
    <string name="registration_name">Meno</string>
    <string name="registration_password">Heslo</string>
    <string name="registration_password_repeat">Zopakujte Heslo</string>
    <string name="registration_go_to_login">Už ste zaregistrovaní? Prihláste sa</string>
    <string name="password_rule">Podmienky: Heslo musí obsahovať aspoň 6 znakov, z toho aspoň jedno písmeno a jednu číslicu.</string>


    <string name="forgot_password_title">Obnovenie hesla</string>
    <string name="forgot_password_text">Zadajte e-mail, na ktorý vám bude zaslaný odkaz na obnovenie hesla.</string>
    <string name="forgot_password_btn">Zaslať</string>

    <string name="Teoria_1">1. Rozvrhovanie a logistika</string>
    <string name="Teoria_2">2. Základné metódy operačného výskumu</string>
    <string name="Teoria_3">3. Alokácia do jedného miesta</string>
    <string name="Teoria_4">4. Alokácia do viacerých miest</string>
    <string name="Teoria_5">5. Rozvrhovanie 1</string>
    <string name="Teoria_6">6. Rozvrhovanie 2</string>
    <string name="Teoria_7">7. Rozvrhovanie 3</string>
    <string name="Teoria_8">8. Prognózovanie</string>
    <string name="Teoria_9">9. Plánovanie výrobných kapacít</string>
    <string name="Teoria_10">10. Zásobovanie</string>
    <string name="Teoria_11">11. Úlohy s ohraničeniami</string>

    <string name="no_internet_connection">Pripojte sa k internetu, aby bolo možné vidieť progres</string>
    <string name="no_internet_connection2">Alebo reštartujte aplikáciu</string>

    <string name="returnFromTests">Späť</string>
    <string name="nextQuestion">Ďalej</string>
    <string name="Correct">Správnych</string>
    <string name="Wrong">Nesprávnych</string>
    <string name="shuffleTest">Zmiešať testy</string>

    <string name="Advice1">Výborne</string>
    <string name="Advice2">Veľmi dobre</string>
    <string name="Advice3">Dobre</string>
    <string name="Advice4">Uspokojivo</string>
    <string name="Advice5">Dostatočne</string>
    <string name="Advice6">Nedostatočne</string>

    <string name="Priklady_1">1. Lineárne programovanie 1</string>
    <string name="Priklady_2">2. Lineárne programovanie 2.</string>
    <string name="Priklady_3">3. Celočíselné programovanie a alokačné úlohy</string>
    <string name="Priklady_4">4. Metóda vetvenia a medzí</string>
    <string name="Priklady_5">5. Metóda CRAFT</string>
    <string name="Priklady_6">6. Rozvrhovanie 1.</string>
    <string name="Priklady_7">7. Rozvrhovanie 2.</string>

    <string name="rating">TOP 15</string>
    <string name="name">Meno</string>
    <string name="progress">Prospech</string>

    <string name="aboutApp">O Aplikácii</string>
    <string name="aboutInfo">Táto aplikácia bola vytvorená ako súčasť bakalárskej práce na tému "Mobilná aplikácia pre podporu výučby predmetu Rozvrhovanie a logistika",
        realizovanej na Katedre kybernetiky a umelej inteligencie, Fakulta elektrotechniky a informatiky, Technická univerzita v Košiciach v roku 2024.
        Hlavným cieľom aplikácie je podpora vzdelávania a pochopenia Rozvrhovanie a logistika. Práca sa zameriava najmä
        na využitie potenciálu mobilných technológií na zlepšenie vzdelávacieho procesu a sprístupnenie a zefektívnenie
        učenia pre študentov. Vývoj tejto aplikácie poukazuje na dôležitosť integrácie moderných technológií do oblasti vzdelávania.</string>


    <string name="sendFeedback">Poslať spätnú väzbu</string>


</resources>